crates/server-less/tests/fixtures/http_empty_impl.stderr
error: #[http] applied to an empty impl block — no routes will be generated.
       Add at least one method, or remove the attribute.
 --> tests/fixtures/http_empty_impl.rs:5:16
  |
5 | impl MyService {}
  |                ^
